Create all classes for views.

--- a/LoginWithFirebase/View/Base.lproj/Main.storyboard
+++ b/LoginWithFirebase/View/Base.lproj/Main.storyboard
@@ -21,7 +21,7 @@
         <!--Welcome-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="LoginWithFirebase" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="HomeViewController" customModule="LoginWithFirebase" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -40,11 +40,11 @@
                                     <color key="titleColor" red="0.27058823529999998" green="0.72156862749999995" blue="0.72549019609999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <segue destination="Uap-ub-oF1" kind="show" identifier="goToRegister" id="BhS-QC-fSR"/>
+                                    <segue destination="Uap-ub-oF1" kind="show" id="ZEv-mR-OOB"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6UB-zS-mQL">
-                                <rect key="frame" x="0.0" y="575" width="375" height="44"/>
+                                <rect key="frame" x="0.0" y="579" width="375" height="44"/>
                                 <color key="backgroundColor" red="0.96470588235294119" green="0.82352941176470584" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="gC4-9R-i4e"/>
@@ -61,7 +61,7 @@
                         <constraints>
                             <constraint firstItem="G5T-1F-sfb" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="5cK-nK-6Lm"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="bn9-ht-WYE" secondAttribute="bottom" id="NcY-a2-y22"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="6UB-zS-mQL" secondAttribute="bottom" constant="48" id="W9b-XP-2qV"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="6UB-zS-mQL" secondAttribute="bottom" constant="44" id="W9b-XP-2qV"/>
                             <constraint firstItem="G5T-1F-sfb" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="XoY-bp-1FQ"/>
                             <constraint firstItem="G5T-1F-sfb" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="aOu-e9-h2e"/>
                             <constraint firstItem="bn9-ht-WYE" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="dGz-gd-qEW"/>
@@ -87,14 +87,11 @@
         <!--Log In-->
         <scene sceneID="k1B-KQ-TGc">
             <objects>
-                <viewController title="Log In" id="iac-wb-WBF" sceneMemberID="viewController">
+                <viewController title="Log In" id="iac-wb-WBF" customClass="LogInViewController" customModule="LoginWithFirebase" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Vhc-f8-qKK">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.5" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LOGIN" translatesAutoresizingMaskIntoConstraints="NO" id="fsx-Fy-QZP">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                            </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="kIh-Gx-s2o">
                                 <rect key="frame" x="46.5" y="158" width="282" height="351"/>
                             </imageView>
@@ -105,6 +102,9 @@
                                 <state key="normal" title="Log In">
                                     <color key="titleColor" red="0.34901960780000002" green="0.64313725489999995" blue="0.81176470590000005" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="buttonLogInPressed:" destination="iac-wb-WBF" eventType="touchUpInside" id="dSf-BR-3xo"/>
+                                </connections>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter email adress please" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WnF-bD-qgr">
                                 <rect key="frame" x="64" y="272" width="247" height="30"/>
@@ -127,9 +127,13 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Forget Password?"/>
                                 <connections>
+                                    <action selector="buttonForgetPswPressed:" destination="iac-wb-WBF" eventType="touchUpInside" id="tED-bJ-rQH"/>
                                     <segue destination="hka-Xq-nZN" kind="show" identifier="goRecoveryPassword" id="LMb-pB-swr"/>
                                 </connections>
                             </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.5" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LOGIN" translatesAutoresizingMaskIntoConstraints="NO" id="fsx-Fy-QZP">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -143,6 +147,8 @@
                         <viewLayoutGuide key="safeArea" id="TuB-o3-85V"/>
                     </view>
                     <connections>
+                        <outlet property="textFieldEmailAdress" destination="WnF-bD-qgr" id="vl0-ms-eH7"/>
+                        <outlet property="textFieldPassword" destination="Zln-t4-n0p" id="94F-BI-wR2"/>
                         <segue destination="RGH-4Z-ard" kind="show" identifier="goToHome" id="EkJ-G6-af2"/>
                     </connections>
                 </viewController>
@@ -153,7 +159,7 @@
         <!--Home-->
         <scene sceneID="8zE-xU-OMu">
             <objects>
-                <viewController title="Home" id="RGH-4Z-ard" sceneMemberID="viewController">
+                <viewController title="Home" id="RGH-4Z-ard" customClass="MainViewController" customModule="LoginWithFirebase" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="tVf-ww-uD4">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -167,6 +173,9 @@
                                 <state key="normal" title="Log Out">
                                     <color key="titleColor" red="1" green="0.52904134989999996" blue="0.0080108819529999993" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="buttonLogOutPressed:" destination="RGH-4Z-ard" eventType="touchUpInside" id="l6e-3S-obA"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Home" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EIX-oB-Cd2">
                                 <rect key="frame" x="159" y="321" width="57" height="24"/>
@@ -193,7 +202,7 @@
         <!--Recovey Password-->
         <scene sceneID="3hB-Sy-IRL">
             <objects>
-                <viewController title="Recovey Password" id="hka-Xq-nZN" sceneMemberID="viewController">
+                <viewController title="Recovey Password" id="hka-Xq-nZN" customClass="RecoveryPswdViewController" customModule="LoginWithFirebase" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="cV8-yh-oNj">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -219,6 +228,9 @@
                                 <state key="normal" title="Recovery Password">
                                     <color key="titleColor" red="0.34901960780000002" green="0.64313725489999995" blue="0.81176470590000005" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="buttonRecoveryPassword:" destination="hka-Xq-nZN" eventType="touchUpInside" id="yHh-Oe-bfO"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -232,6 +244,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ef1-zd-grG"/>
                     </view>
+                    <connections>
+                        <outlet property="textFieldRecoveryPassword" destination="r22-AG-SeJ" id="XiD-gw-kj2"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="frJ-Vf-0IP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -240,7 +255,7 @@
         <!--Register-->
         <scene sceneID="wIz-Xe-XFP">
             <objects>
-                <viewController title="Register" id="Uap-ub-oF1" sceneMemberID="viewController">
+                <viewController title="Register" id="Uap-ub-oF1" customClass="RecoveryPswdViewController" customModule="LoginWithFirebase" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="CG1-VU-Wh8">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -274,6 +289,9 @@
                                 <state key="normal" title="Resgister">
                                     <color key="titleColor" red="0.34901960780000002" green="0.64313725489999995" blue="0.81176470590000005" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="buttonRegisterPressed:" destination="Uap-ub-oF1" eventType="touchUpInside" id="Sz9-Ch-04y"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -288,6 +306,8 @@
                         <viewLayoutGuide key="safeArea" id="Hm2-xD-ucp"/>
                     </view>
                     <connections>
+                        <outlet property="textFieldEmailAdress" destination="P17-b8-alv" id="eBz-d2-7VJ"/>
+                        <outlet property="textFieldPassword" destination="fhQ-KO-Tkd" id="5g4-NY-cN6"/>
                         <segue destination="RGH-4Z-ard" kind="show" identifier="goToHome" id="QeY-pu-Lks"/>
                     </connections>
                 </viewController>
@@ -321,6 +341,6 @@
         <image name="bg" width="282" height="351"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="EkJ-G6-af2"/>
+        <segue reference="QeY-pu-Lks"/>
     </inferredMetricsTieBreakers>
 </document>
