--- a/LoginWithFirebase/View/Base.lproj/Main.storyboard
+++ b/LoginWithFirebase/View/Base.lproj/Main.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13168.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="YKg-aG-csN">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13189.4" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="YKg-aG-csN">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13147.4"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13165.3"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -34,10 +34,13 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.34901960784313724" green="0.64313725490196072" blue="0.81176470588235294" alpha="1" colorSpace="calibratedRGB"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6UB-zS-mQL">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6UB-zS-mQL">
                                 <rect key="frame" x="0.0" y="579" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.96470588235294119" green="0.82352941176470584" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="375" id="2Vc-Lm-EOY"/>
+                                    <constraint firstAttribute="height" constant="44" id="br5-6E-GCX"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="20"/>
                                 <state key="normal" title="Log In">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -46,10 +49,13 @@
                                     <segue destination="iac-wb-WBF" kind="show" identifier="goToLogin" id="7tq-k3-xwf"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OWN-Nm-vc4">
-                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OWN-Nm-vc4">
+                                <rect key="frame" x="0.0" y="628" width="375" height="39"/>
                                 <color key="backgroundColor" red="0.34901960780000002" green="0.64313725489999995" blue="0.81176470590000005" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="3nR-3c-nAq"/>
+                                    <constraint firstAttribute="width" constant="375" id="8xW-Cq-1DH"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="20"/>
                                 <state key="normal" title="Register">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -60,6 +66,15 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="OWN-Nm-vc4" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="8oG-66-INv"/>
+                            <constraint firstItem="6UB-zS-mQL" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="515" id="Bhl-0F-U3t"/>
+                            <constraint firstItem="OWN-Nm-vc4" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="DhX-fA-d50"/>
+                            <constraint firstItem="6UB-zS-mQL" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Rej-Gb-HFF"/>
+                            <constraint firstItem="OWN-Nm-vc4" firstAttribute="top" secondItem="6UB-zS-mQL" secondAttribute="bottom" constant="5" id="h74-c9-maV"/>
+                            <constraint firstItem="OWN-Nm-vc4" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="kI8-XF-HdI"/>
+                            <constraint firstItem="6UB-zS-mQL" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="uJH-el-7dg"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" title="Welcome" id="ZQZ-iE-2bv">
@@ -82,9 +97,8 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="kIh-Gx-s2o">
-                                <rect key="frame" x="47" y="202.5" width="282" height="351"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="kIh-Gx-s2o">
+                                <rect key="frame" x="47" y="158" width="282" height="351"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rhH-Rg-fS2">
                                 <rect key="frame" x="64" y="410" width="247" height="44"/>
@@ -135,6 +149,10 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="kIh-Gx-s2o" firstAttribute="centerX" secondItem="Vhc-f8-qKK" secondAttribute="centerX" id="NZe-Et-dMZ"/>
+                            <constraint firstItem="kIh-Gx-s2o" firstAttribute="centerY" secondItem="Vhc-f8-qKK" secondAttribute="centerY" id="q0j-b9-9FN"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="TuB-o3-85V"/>
                     </view>
                     <connections>
@@ -202,9 +220,8 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="925-c9-ieJ">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="925-c9-ieJ">
                                 <rect key="frame" x="47" y="158" width="282" height="351"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter email adress please" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="r22-AG-SeJ">
                                 <rect key="frame" x="64" y="299" width="247" height="35"/>
@@ -227,6 +244,10 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="925-c9-ieJ" firstAttribute="centerX" secondItem="cV8-yh-oNj" secondAttribute="centerX" id="0b4-LL-sPc"/>
+                            <constraint firstItem="925-c9-ieJ" firstAttribute="centerY" secondItem="cV8-yh-oNj" secondAttribute="centerY" id="iq1-cV-zJR"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="ef1-zd-grG"/>
                     </view>
                     <connections>
@@ -249,9 +270,8 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="EkJ-n8-Yij">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="EkJ-n8-Yij">
                                 <rect key="frame" x="46" y="158" width="282" height="351"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter New Password" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="EIq-Pd-gqs">
                                 <rect key="frame" x="64" y="293" width="247" height="30"/>
@@ -282,6 +302,10 @@
                             </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="EkJ-n8-Yij" firstAttribute="centerX" secondItem="K9X-My-cQI" secondAttribute="centerX" id="0le-hV-X6Y"/>
+                            <constraint firstItem="EkJ-n8-Yij" firstAttribute="centerY" secondItem="K9X-My-cQI" secondAttribute="centerY" id="ZsS-nE-Vqn"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="H1N-78-0mJ"/>
                     </view>
                 </viewController>
@@ -301,9 +325,8 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="hYv-gK-rST">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="hYv-gK-rST">
                                 <rect key="frame" x="47" y="158" width="282" height="351"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter email adress please" textAlignment="center" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="P17-b8-alv">
                                 <rect key="frame" x="64" y="279" width="247" height="30"/>
@@ -334,6 +357,10 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="hYv-gK-rST" firstAttribute="centerX" secondItem="CG1-VU-Wh8" secondAttribute="centerX" id="Uiv-N0-9xy"/>
+                            <constraint firstItem="hYv-gK-rST" firstAttribute="centerY" secondItem="CG1-VU-Wh8" secondAttribute="centerY" id="q6c-63-dWi"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Hm2-xD-ucp"/>
                     </view>
                     <connections>
@@ -352,7 +379,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="YKg-aG-csN" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="yiX-br-mJH">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
